--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "bedrock_fm"
-version = "0.4.8"
+version = "0.4.9"
 authors = [ "Massimiliano Angelino" ]
 description = "A package to simplify interaction with Bedrock Foundation models"
 readme = "README.md"
+repository = "https://github.com/mirai73/bedrock-fm"
 license = "MIT"
 classifiers = [
     "Programming Language :: Python :: 3",
